 - restructured code to add function process_event() (Alexei)
 - table ALARMS renamed to EVENTS (Alexei)
 - added automatic generation of database schemas (Alexei)
 - pinger will use unique temporary file name (Alexei)
 - developed SLA calculation periods (Eugene)
 - developed flexible update intervals for items (Eugene)

Integrated from 1.1.x

1.1.5

 - fixed calculation of sum(#N) (Alexei)
 - fixed temporary files deletion for WinXX agents (Eugene)
 - improved 'service_status[*]' allowed service name and display name (Eugnene)
 - added error reporting of PostgreSQL for frontend (Eugene)
 - fixed sms sender (Eugene)
 - fixed buffer overflow while processing SNMP IP addresses (Alexei)
 - fixed agent's calculation of network statistics (Alexei)
 - fixed some compilation warnings (Alexei)
 - fixed "not equal" condition for hosts and host groups in actions (Alexei)
 - added support of macro TRIGGER.URL and TRIGGER.COMMENT (Alexei)
 - fixed dependences of item deletion (Eugene)
 - fixed Y asix value displaying for graphs (Eugene)

1.1.4

 - fixed warning displaying (Eugene)
 - added sorting by host in graph selection for screen element (Eugene)
 - fixed 'service_status[*]' for WinXX system (Eugene)
 - fixed processing of web.page.regexp[] (Alexei)
 - fixed trigger function fuzzytime() (Alexei)
 - fixed graph displaying with period 1d - 2d8h (Eugene)
 - fixed hosts remembering for graphs (Eugene)
 - fixed processing of unit "uptime" (Alexei)
 - support of ListenIP for ZABBIX server (Alexei)
 - changed PostgreSQL last OID function to pg_last_oid() (Alexei)
 - fix for start time in graph navigation (Alexei)
 - minor fix for Spanish translation (Alexei)
 - fixed default config name for zabbix_agent (Alexei)
 - fixed swapped system CPU and nice CPU stats in ZABBIX agent (Alexei)
 - fixed processing of item calculated as delta speed per second (Alexei)

1.1.3
 - added Dutch tranlation (Alexei)
 - fixed processing of SNMP HEX and OCTET string values (Alexei)